<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:background="@drawable/bg_round_fill"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmAddress"
                android:textColor="@color/black_color"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/tvChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/change"
                android:textColor="@color/blue2"
                android:textSize="@dimen/small" />
        </RelativeLayout>


        <EditText
            android:id="@+id/etCustomAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/customAddress"
            android:inputType="text"
            android:maxLines="4"
            android:minLines="1"
            android:textSize="@dimen/small" />

        <AutoCompleteTextView
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="100dp"
            android:gravity="center_vertical"
            android:hint="@string/registeration_user_location"
            android:inputType="text"
            android:maxLines="4"
            android:minLines="1"
            android:textSize="@dimen/small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/tvPurchase"
                android:background="@color/gray3"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/medium" />

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/orange_color"
                android:padding="5dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/medium" />


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>