<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/pure_white_color"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="350dp"
    android:layout_height="300dp">
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:src="@drawable/sad_smiley"
        android:layout_height="120dp" />
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text_eighteen"
        android:text="@string/are_you_sure"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/text_eighteen"
        android:text="@string/want_2_exit"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/yes_btn"

                android:text="@string/yes"
                android:textSize="@dimen/text_eighteen"
                android:gravity="center"
                android:background="@drawable/exit_screen_yes_button"
                android:textColor="@color/green_color"
                android:layout_width="110dp"
                android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/no_btn"

                android:text="@string/no"
                android:textSize="@dimen/text_eighteen"
                android:gravity="center"
                android:background="@drawable/exit_screen_no_button"
                android:textColor="@color/red_color"
                android:layout_width="110dp"
                android:layout_height="40dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>