<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Seller.BuyerActivity">


    <include layout="@layout/toolbar" />



    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rbBoth"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/both"
            android:textSize="@dimen/defaultSize" />

        <RadioButton
            android:id="@+id/rbPurchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/purchased"
            android:textSize="@dimen/defaultSize" />

        <RadioButton
            android:id="@+id/rbOrderPlaced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderPlaced"
            android:textSize="@dimen/defaultSize" />


    </RadioGroup>
    <include layout="@layout/layout_empty_text" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>