<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@drawable/bg_white_round_outline_gray"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/black_color"
            android:textSize="20sp"
            fontPath="fonts/System_San_Francisco_Display_Bold.ttf"
            android:text="@string/change_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--<TextView-->
            <!--android:paddingLeft="15dp"-->
            <!--android:paddingRight="15dp"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingTop="10dp"-->
            <!--android:textColor="#000000"-->
            <!--fontPath="fonts/System_San_Francisco_Display_Regular.ttf"-->
            <!--android:text="@string/forgetPswdTitle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <EditText
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:minLines="1"
            android:padding="10dp"
            android:id="@+id/etOldPswd"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            android:layout_marginRight="15dp"
            android:hint="@string/oldPswd"
            android:background="@drawable/bg_white_round_outline_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:id="@+id/etNewPswd"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/newPswd"
            android:background="@drawable/bg_white_round_outline_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:minLines="1"
            android:padding="10dp"
            android:id="@+id/etConfirmPswd"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/confirmPassword"
            android:background="@drawable/bg_white_round_outline_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="10dp"
            android:background="@color/text_grey"
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
        </View>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/redAppColor"
                    fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                    android:text="@string/product_details_Cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/text_grey"
                android:layout_width="0.5dp"
                android:layout_height="match_parent">
            </View>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tv_ok"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/redAppColor"
                    fontPath="fonts/System_San_Francisco_Display_Regular.ttf"
                    android:text="@string/ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>